--- a/by_code/readme.adoc
+++ b/by_code/readme.adoc
@@ -26,11 +26,7 @@ Config for contracts stubs jar
 
 [source, yml]
 ----
-stubrunner:
-  # artifact ids containing stubs to be downloaded
-  ids: com.example.groupid:artifactid:version:classifier:stubs-port
-  # url of where the stubs reside
-  repositoryRoot: http://localhost:8081/artifactory/libs-release-local
+include::src/main/resources/application.yml[]
 ----
 
 After these, run your application, stub runner is starting for `stubs-port`.
